<resources>
    <string name="app_name">Дневник здоровья</string>
    <string name="nav_header_title">Дневник здоровья</string>

    <string name="menu_parameters">Учёт показателей</string>
    <string name="menu_watertrack">Контроль жидкости</string>
    <string name="menu_statistics">Статистика</string>
    <string name="menu_planning">Планирование</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_recommendations">Рекомендации</string>
    <string name="menu_main">Главный экран</string>
    <string name="menu_exit">Выход</string>
    <string name="recommendation">Рекомендация</string>
    <string name="title">Title</string>
    <string name="menu_medicaments">Медикаменты</string>
    <string name="medicament_name">Наименование</string>
    <string name="title_dosage">Дозировка</string>
    <string name="manufacturer_title">Производитель</string>
    <string name="title_price">Цена</string>
    <string name="input_your_sex">Ваш пол</string>
    <string name="input_your_birth_date">Ваша дата рождения</string>
    <string name="input">Ввод</string>
    <string name="choose_your_birth_date">Выберите Вашу дату рождения</string>
    <string name="input_your_weight">Ваш вес</string>
    <string name="input_your_height">Ваш рост</string>
    <string name="input_your_parameters_and_get_a_hint">Введите Ваши параметры и получите подсказку.</string>
    <string name="save">Сохранить</string>
    <string name="date">Дата</string>
    <string name="weight">Вес</string>
    <string name="height">Рост</string>
    <string name="planned_event">Планируемое событие</string>
    <string name="new_plan_added">Новое событие было добавлено!</string>
    <string name="medicine_taking">Приём лекарства</string>
    <string name="date_format">dd.MM.yyyy</string>
    <string name="title_date_format">MMM yyyy</string>
    <string name="fill_empty_imputs">Заполните пустые поля!</string>
    <string name="birth_date_key">birthDate</string>
    <string name="sex_key">sex</string>
    <string name="mass_index_key">massIndex</string>
    <string name="values_saved">Новые значения были сохранены!</string>
    <string name="ru">ru</string>
    <string name="mass_index_deficit_hint">Дефицит массы тела</string>
    <string name="mass_index_normal_hint">Нормальная масса тела</string>
    <string name="mass_index_excess_hint">Лишний вес</string>
    <string name="mass_index_first_degree_hint">Первая степень ожирения</string>
    <string name="mass_index_second_degree_hint">Вторая степень ожирения</string>
    <string name="mass_index_third_degree_hint">Третья степень ожирения</string>
    <string name="dot">.</string>
    <string name="your_age">Ваш возраст %d</string>
    <string name="recommendation_text">Текст рекомендации</string>
    <string name="water_control">Контроль количества выпитой жидкости</string>
    <string name="zero_percent">0%</string>
    <string name="ml">ml</string>
    <string name="water">Вода</string>
    <string name="juice">Сок</string>
    <string name="milk">Молоко</string>
    <string name="coffee">Кофе</string>
    <string name="tea">Чай</string>
    <string name="count">Количество:</string>
    <string name="add">Добавить</string>
    <string name="male">Мужской</string>
    <string name="not_enough_data">Недостаточно данных!</string>
    <string name="progress_percent">%d %%</string>
    <string name="water_current">%d / %d мл</string>
    <string name="no_events">Нет событий</string>
    <string name="adding">Добавление</string>
    <string name="month">Месяц</string>

    <string-array name="sex_list">
        <item>Женский</item>
        <item>Мужской</item>
    </string-array>

    <string-array name="plan_list">
        <item>Прием лекарства</item>
        <item>Сдача анализа</item>
        <item>Запись к врачу</item>
    </string-array>

    <string-array name="statistics_list">
        <item>Рост</item>
        <item>Вес</item>
        <item>ИМТ</item>
        <item>Употребление воды</item>
    </string-array>
</resources>
