<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_parameters">

    <fragment
        android:id="@+id/nav_parameters"
        android:name="com.example.healthdiary.ui.parameters.ParametersFragment"
        android:label="@string/menu_parameters"
        tools:layout="@layout/fragment_parameters" />

    <fragment
        android:id="@+id/nav_medicaments"
        android:name="com.example.healthdiary.ui.medicaments.MedicamentsListFragment"
        android:label="@string/menu_medicaments"
        tools:layout="@layout/fragment_medicaments" />

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.example.healthdiary.ui.statistics.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/nav_planning"
        android:name="com.example.healthdiary.ui.planning.PlanningFragment"
        android:label="@string/menu_planning"
        tools:layout="@layout/fragment_planning" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.healthdiary.ui.statistics.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.healthdiary.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_exit"
        android:name="com.example.healthdiary.ui.exit.ExitFragment"
        android:label="@string/menu_exit"
        tools:layout="@layout/fragment_exit" />

    <fragment
        android:id="@+id/nav_recommendations"
        android:name="com.example.healthdiary.ui.recommendations.RecommendationsListFragment"
        android:label="@string/menu_recommendations"
        tools:layout="@layout/fragment_recommendations" />
</navigation>