<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/title_manufacturer"
            android:layout_width="110dp"
            android:layout_height="29dp"
            android:layout_marginTop="128dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:text="@string/manufacturer_title"
            app:layout_constraintEnd_toStartOf="@+id/medicament_dosage"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/title_manufacturer2"
            android:layout_width="110dp"
            android:layout_height="29dp"
            android:layout_marginTop="176dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:text="@string/title_price"
            app:layout_constraintEnd_toStartOf="@+id/medicament_dosage"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/medicament_name"
            android:layout_width="367dp"
            android:layout_height="34dp"
            android:layout_marginTop="28dp"
            android:text="@string/medicament_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Name" />

    <TextView
            android:id="@+id/medicament_dosage"
            android:layout_width="217dp"
            android:layout_height="31dp"
            android:layout_marginTop="76dp"
            android:text="@string/title_dosage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.803"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Dosage" />

    <TextView
            android:id="@+id/medicament_manufacturer"
            android:layout_width="217dp"
            android:layout_height="31dp"
            android:layout_marginTop="128dp"
            android:text="@string/manufacturer_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.803"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/medicament_price"
            android:layout_width="217dp"
            android:layout_height="31dp"
            android:layout_marginTop="176dp"
            android:text="@string/title_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.803"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Price" />

    <TextView
            android:id="@+id/title_dosage"
            android:layout_width="110dp"
            android:layout_height="29dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:text="@string/title_dosage"
            app:layout_constraintEnd_toStartOf="@+id/medicament_dosage"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>