<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/month_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/month"
                    android:textAlignment="center"
                    android:textSize="20sp" />

            <com.github.sundeepk.compactcalendarview.CompactCalendarView
                    android:id="@+id/compactcalendar_view"
                    android:layout_width="fill_parent"
                    android:layout_height="250dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    app:compactCalendarBackgroundColor="#fcf5f5"
                    app:compactCalendarCurrentDayBackgroundColor="#e34f22"
                    app:compactCalendarCurrentSelectedDayBackgroundColor="#E57373"
                    app:compactCalendarMultiEventIndicatorColor="#fff"
                    app:compactCalendarTargetHeight="250dp"
                    app:compactCalendarTextColor="#000"
                    app:compactCalendarTextSize="12sp" />

            <Switch
                    android:id="@+id/show_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:checked="true"
                    android:text="@string/adding" />

            <Spinner
                    android:id="@+id/spinner_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:entries="@array/plan_list"
                    android:minWidth="200dp" />

            <Spinner
                    android:id="@+id/spinner_medicament"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:minWidth="200dp" />

            <Button
                    android:id="@+id/add_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:width="200dp"
                    android:text="@string/add" />

            <TextView
                    android:id="@+id/plans_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/no_events"
                    android:textAlignment="center" />

            <TableLayout
                    android:id="@+id/results_table"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:shrinkColumns="true">

                <TableRow>

                    <TextView
                            android:layout_weight="1"
                            android:text="@string/date" />

                    <TextView
                            android:layout_weight="3"
                            android:text="@string/planned_event" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="@drawable/question"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
            android:id="@+id/dark"
            android:layout_width="1000dp"
            android:layout_height="1000dp"
            android:alpha="0.6"
            android:scaleType="fitXY"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/dark" />

    <ImageView
            android:id="@+id/help_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/plans_help" />

    <ImageView
            android:id="@+id/help_adding_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/plans_adding_help" />

</androidx.constraintlayout.widget.ConstraintLayout>